--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,20 @@
 *.exe
 *.out
 *.app
+
+# Ninja
+.ninja_deps
+.ninja_log
+
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
